--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "AwesomeProject2",
-  "displayName": "AwesomeProject2"
+  "name": "MovieWorldProject",
+  "displayName": "MovieWorldProject"
 }
